--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
+    "build:analyze": "tsc -b && vite build --mode analyze",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze:size": "npx vite-bundle-analyzer dist",
+    "perf:test": "npm run build && npm run preview"
   },
   "dependencies": {
     "framer-motion": "^11.11.17",
@@ -28,6 +31,7 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.7.2",
+    "typescript-eslint": "^8.18.1",
     "vite": "^6.3.5"
   }
 }
