--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "perf:test": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
