--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://kunalis.me/kunal-website",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
@@ -10,7 +11,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "analyze:size": "npx vite-bundle-analyzer dist",
-    "perf:test": "npm run build && npm run preview"
+    "perf:test": "npm run build && npm run preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
@@ -28,6 +31,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
