--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://kunalis.me/kunal-website",
+  "homepage": "https://kunalis.me",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
